# apigraveyard

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/: ROADMAP_ISSUES.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
hooks/: pre-commit
python-tui/: README.md  pyproject.toml
python-tui/src/apigraveyard_tui/: __init__.py  ai_chat.py  app.py  database.py  scanner.py  styles.tcss  tester.py  widgets.py
scripts/: install-hooks.js
src/: database.js  display.js  scanner.js  tester.js
